--- a/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode.csproj
@@ -7,12 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Inputs\03.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AoCHelper" Version="1.0.2" />
   </ItemGroup>
 
   <PropertyGroup>
     <NoWarn>S101</NoWarn>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Resource Include="Inputs\03.txt" />
+  </ItemGroup>
 
   <ItemGroup>
     <None Update="Inputs\*">
