--- a/AoCTests/AoCTests.csproj
+++ b/AoCTests/AoCTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -6,6 +6,22 @@
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="TestInputs\**" />
+    <EmbeddedResource Remove="TestInputs\**" />
+    <None Remove="TestInputs\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Inputs\04InputTest.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Inputs\04InputTest.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
